<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/logo"
        android:scaleType="centerCrop"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/play_bar"
        android:gravity="center_horizontal"
        android:text="@string/text_view_play"
        android:textStyle="bold"
        android:textSize="@dimen/play_text_size"/>
    <LinearLayout
        android:id="@+id/play_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/previous"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/_4_dp"
            android:background="@color/colorAccent"
            android:text="@string/prev"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/play"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/_4_dp"
            android:background="@color/colorAccent"
            android:text="@string/play"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/pause"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/_4_dp"
            android:background="@color/colorAccent"
            android:text="@string/pause"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/_4_dp"
            android:background="@color/colorAccent"
            android:text="@string/next"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>